# libpolyhedra

./: .gitignore  LICENSE  Makefile.am  PAPERS  README.md  configure.ac
include/: Makefile.am  libpolyhedra.h
lib/: Makefile.am  array.c  array.h  bvh_vl.c  bvh_vl.h  convex_decomp.c  convex_hull.c  cube.c  cylinder.c  file_obj.c  file_obj.h  file_stl.c  file_stl.h  file_svg.c  file_svg.h  ftree.c  ftree.h  hash.c  hash.h  icosphere.c  libpolyhedra.c  mass_properties.c  plane_cut.c  queue.c  queue.h  random.c  random.h  simplify.c  transform.c  triangulate2d.c  unique_queue.c  unique_queue.h  util.c  util.h  uvsphere.c  vef.c  vef.h  vertex_list.c
lib/SipHash/: siphash_impl.h
models/: cylinder10.stl  engine_nozzle.stl  sphere10.stl  tee.stl
src/: Makefile.am  polyhedra.c  primative  primative.c
